force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/Healthcare_QuoteDetail_Staging__c.object-meta.xml
<CustomObject>
    <description>Healthcare QuoteDetail Staging object</description>
    <label>Healthcare QuoteDetail Staging</label>
    <nameField>
        <label>Healthcare QuoteDetail Staging</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcare QuoteDetail Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>