force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Field662__c.field-meta.xml
<CustomField>
    <fullName>Field662__c</fullName>
    <label>_</label>
    <length>255</length>
    <type>Text</type>
</CustomField>