force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/HasQuantitySchedule__c.field-meta.xml
<CustomField>
    <fullName>HasQuantitySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasQuantitySchedule</label>
    <type>Checkbox</type>
</CustomField>