force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/HasRevenueSchedule__c.field-meta.xml
<CustomField>
    <fullName>HasRevenueSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasRevenueSchedule</label>
    <type>Checkbox</type>
</CustomField>