force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/HasSchedule__c.field-meta.xml
<CustomField>
    <fullName>HasSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasSchedule</label>
    <type>Checkbox</type>
</CustomField>