force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>