force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Parent_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Parent External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>