force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryId__c</fullName>
    <label>PricebookEntryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>