force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <label>Product2Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>