force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Product2IdNew__c.field-meta.xml
<CustomField>
    <fullName>Product2IdNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Healthcare QuoteDetail Staging</relationshipLabel>
    <relationshipName>Healthcare_QuoteDetail_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>