force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/QuantityUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasureId__c</fullName>
    <label>QuantityUnitOfMeasureId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>