force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <label>QuoteId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>