force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field662__c</columns>
    <columns>Id__c</columns>
    <columns>IsDeleted__c</columns>
    <columns>LineNumber__c</columns>
    <columns>CurrencyIsoCode__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>CreatedById__c</columns>
    <columns>LastModifiedDate__c</columns>
    <columns>LastModifiedById__c</columns>
    <columns>SystemModstamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>